--- a/code/compre-学成在线/style.css
+++ b/code/compre-学成在线/style.css
@@ -2,7 +2,10 @@
     margin: 0;
     padding: 0;
 }
-
+.body {
+    color: #222;
+    font-family: Hiragino Sans GB,Microsoft YaHei,Arial,sans-serif;
+}
 li {
     list-style: none;
 }
@@ -16,9 +19,21 @@ a {
     margin: auto;
 }
 
+.clearfix:before,.clearfix:after {
+    content: "";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;
+}
 .header {
     height: 60px;
-    background-color: aqua;
+    /* background-color: aqua; */   
     margin: 30px auto;
 }
 
@@ -26,9 +41,12 @@ a {
     float: left;
     height: 60px;
     width: 400px;
-    background-color: rgba(0, 0, 255, 0.514);
+    background: url(images/logo.png) no-repeat;
+    background-position-y: -3px;
+    background-size: 35%;
     font-size: 23px;
-    font-weight: 700;
+    text-indent: 2em;
+    font-weight: 400;
     line-height: 60px;
     text-align: center;
 }
@@ -64,7 +82,7 @@ a {
     width: 550px;
     height: 60px;
     margin-left: 90px;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .search input {
@@ -85,7 +103,11 @@ a {
     /* 注意这里button的width+input的width必须等于search的width，不然button会掉下去 */
     width: 84px;
     height: 60px;
-    background-color: #00a4ff;
+    background-color: #0097e9c0;
+    background-image: url(images/search.svg);
+    background-repeat: no-repeat;
+    background-size: 90px 170px;
+    background-position-y: -10px;
     /* 手动去掉button边框 */
     border: 0;
 
@@ -100,19 +122,21 @@ a {
 }
 
 .banner {
-    height: 450px;
-    background-color: purple;
+    height: 550px;
+    background-color: rgba(59, 59, 59, 0.048);
 }
 
-.banner>.w {
-    height: 450px;
-    background-color: brown;
+.banner .w {
+    height: 550px;
+    background: url(images/background.jpg) no-repeat;
+    background-position: 0 -80px;
 }
 
 .subnav {
     float: left;
     width: 250px;
     height: 450px;
+    margin-top: 40px;
     background: rgba(0, 0, 0, 0.233);
 }
 
@@ -140,13 +164,13 @@ a {
     height: 350px;
     width: 230px;
     margin-top: 40px;
-    background-color: pink;
+    background-color: rgba(255, 255, 255, 0.815);
 }
 
 /* 我的课程表 */
 .course h2 {
     height: 50px;
-    background-color: skyblue;
+    background-color: rgba(135, 207, 235, 0.815);
     text-align: center;
     line-height: 50px;
     font-size: 23px;
@@ -189,7 +213,7 @@ a {
 .good {
     height: 80px;
     margin-top: 20px;
-    box-shadow: 5px 5px 10px 4px rgba(0, 0, 0, .2);
+    box-shadow: 5px 5px 6px 4px rgba(0, 0, 0, .2);
     line-height: 80px;
 }
 
@@ -214,6 +238,9 @@ a {
     padding: 0 30px;
 }
 
+.goods li a:hover {
+    color: #10abff;
+}
 .good a {
     color: #10abff;
 }
@@ -239,10 +266,102 @@ a {
     font-size: 16px;
     color: #888888;
 }
+
 .box-bd ul li {
     float: left;
     height: 450px;
     width: 337px;
-    background-color: pink;
+    /* background-color: pink; */
     margin: 0 0 20px 20px;
+    box-shadow: 5px 5px 5px 4px rgba(0, 0, 0, .1);
+}
+
+.box-bd ul li img {
+    width: 100%;
+    height: 71%;
+}
+
+.box-bd ul li h4 {
+    margin: 15px 15px 15px 30px;
+    font-size: 23px;
+    font-weight: 600;
+    color: #333;
+}
+
+.box-bd .info {
+    margin: 0 20px 0 30px;
+    font-size: 18px;
+    color: #999;
+}
+
+.box-bd .info span {
+    color: coral;
+}
+
+.footer {
+    height: 300px;
+}
+
+.footer .w {
+    padding-top: 50px;
+}
+
+.copyright {
+    float: left;
+}
+
+.links {
+    float: right;
+}
+
+.copyright p {
+    margin-top: 15px;
+    font-size: 18px;
+    color: #bfbfbf;
+    margin: 15px 0 20px 0;
+}
+
+.copyright a {
+    display: block;
+    width: 120px;
+    height: 40px;
+    padding: 0 25px;
+    line-height: 40px;
+    text-align: center;
+    font-size: 23px;
+    color: #00a4ff;
+    border: 2px solid #00a4ff;
+}
+
+.links {
+    margin-top: 30px;
+}
+.links .col {
+    display: inline-block;
+    width: 250px;
+    height: 200px;
+}
+
+.links .col span {
+    display: block;
+    margin-bottom: 15px;
+    padding:0 15px;
+    font: 18px;
+    font-weight: 600px;
+    color: #999;
+}
+
+.links .col a {
+    display: inline-block;
+    height: 20px;
+    width: 200px;
+    margin-bottom: 15px;
+    padding:0 20px;
+    font-size: 16px;
+    color: #212121;
+    transition: color 0.3s;
+}
+ 
+.links .col a:hover {
+    color: #00a1d6;
 }
