--- a/code/compre-品优购/css/common.css
+++ b/code/compre-品优购/css/common.css
@@ -42,7 +42,6 @@
 .header {
     position: relative;
     height: 105px;
-    background-color: pink;
 }
 
 .header .logo {
@@ -133,4 +132,54 @@
     color: #fff;
     background-color: #e60012;
     padding: 0 5px;
+}
+
+.nav {
+    height: 47px;
+    border-bottom: 2px solid #b1191a;
+    ;
+}
+
+.nav .dropdown {
+    float: left;
+    width: 210px;
+    height: 45px;
+    background-color: #b1191a;
+}
+
+.nav .navitems {
+    float: left;
+}
+
+.dropdown .dt {
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+    line-height: 45px;
+}
+
+.dropdown .dd {
+    width: 210px;
+    height: 465px;
+    background-color: red;
+}
+
+.dropdown .dd ul li {
+    height: 31px;
+    line-height: 31px;
+    margin-left: 2px;
+    color: #fff;
+}
+.dropdown .dd ul li:hover {
+    background-color: #fff;
+    color: red;
+}
+.dropdown .dd ul li a {
+    font-size: 14px;
+    color: #fff;
+}
+.dropdown .dd ul li:hover a {
+    color: red;
 }
